# DAWGE

./: .gitignore  README.md  dawge_env.yml  setup.py  sync_unitree_and_bangalore.sh  train.py  version.txt
contrastive_learning/: pli_train.py  train.py
contrastive_learning/configs/: pli_train.yaml  train.yaml
contrastive_learning/datasets/: dataloaders.py  dataset.py  pli_dataset.py  preprocess.py  ref_state_dataset.py  state_dataset.py  visual_dataset.py
contrastive_learning/models/: custom_models.py  pretrained_models.py
contrastive_learning/notebooks/: diffusion.ipynb  (+11 more)
scripts/: sync_unitree_and_bangalore.sh
src/dawge_planner/: CMakeLists.txt  package.xml  setup.py
src/dawge_planner/config/: home_poses.yaml
src/dawge_planner/include/: HardwareBridge.h  JPosInitializer.h  LegController.h
src/dawge_planner/launch/: robot_setup.launch  run_tasks.launch
src/dawge_planner/rviz/: dawge.rviz
src/dawge_planner/scripts/: client_secrets.json  joy_to_pose.py  moveit_planning.py  setup.py  utils.py
src/dawge_planner/scripts/aruco_markers/: aruco_markers.ipynb  generate_markers.ipynb  save_markers.py
src/dawge_planner/scripts/data_saving/: realsense.py  save_all.py  save_markers.py  save_robot.py  save_stream.py  stream_camera.py
src/dawge_planner/scripts/dawge_planner/aruco_markers/: aruco_markers.ipynb
src/dawge_planner/scripts/dawge_planner/data_saving/: save_all.py  save_markers.py  save_robot.py
src/dawge_planner/scripts/dawge_planner/deploy_models/: run_inverse_model.py  run_pli_sbfd.py
src/dawge_planner/scripts/dawge_planner/tasks/: high_lvl_task.py  move_forward_task.py  teleop.py
src/dawge_planner/scripts/inverse_model/: run_inverse_model.py
src/dawge_planner/scripts/tasks/: high_lvl_task.py  move_forward_task.py  task_base.py  teleop.py
src/dawge_planner/src/: HardwareBridge.cpp  JPosInitializer.cpp  LegController.cpp  main_helper.cpp
src/dawge_planner/src/exe/: comm_hardware.cpp  main_helper.cpp
(+55 files in other folders)
